# Notebook-llm

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  README.md  RUNBOOK.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260306_0001_initial_schema.py  20260306_0002_repair_legacy_schema.py  20260309_0003_add_podcast_voice_label.py  20260310_0004_add_chat_session_summary.py  20260310_0005_add_notebook_usage.py  20260311_0006_add_notebook_pins.py
infra/: docker-compose.prod.yml  docker-compose.yml
infra/nginx/: default.conf
scripts/: __init__.py  preflight.py  profile_podcast_tts.py  retrieval_eval.py  run_worker.py  runtime_smoke.py
specs/: RFC-alembic-retrieval-eval-2026-03-06.md  RFC-notebooklm-clone-2026-03-05.md  RFC-pastel-ui-redesign-2026-03-10.md  RFC-phase6-completion-2026-03-05.md  RFC-stabilization-zep-mandatory-2026-03-06.md  production-audit-2026-03-27.md
src/backend/app/: main.py
src/backend/prompts/: answer_system_prompt.md  citation_guard_prompt.md  podcast_system_prompt.md
src/backend/schemas/: auth.py  chat.py  chunk.py  citation.py  (+6 more)
src/frontend/: streamlit_app.py
src/frontend-web/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
tests/: conftest.py
tests/e2e/: test_full_user_journey.py  test_health_envelope.py
tests/evals/: retrieval_golden.json
tests/integration/: test_auth_api.py  test_auth_redis_outage.py  test_cache_invalidation.py  test_health_readiness_zep.py  test_memory_service.py  test_metrics_endpoint.py  test_notebook_api.py  test_podcast_retry_api.py  test_queue_strict_api.py  test_source_chunks_api.py
tests/unit/: test_auth_services.py  test_auth_state_store.py  test_chat_contracts.py  test_circuit_breaker.py  test_citation_guard.py  test_health_checks.py  test_podcast_script_generator.py  test_podcast_worker.py  test_response_generator.py  test_retrieval_eval_harness.py  test_retrieval_reranker.py  test_runtime_config.py  test_security_hardening.py  test_semantic_cache.py  test_storage_paths.py  test_task_queue.py  test_tts_service.py  test_zep_client.py
(+151 files in other folders)
